2006-07-21  Christophe Bliard  <christophe.bliard@trux.info>

	* docs/fr/fr.po: small update in French documentation
	* docs/fr/figures/*.png: updated screenshots
	
2006-07-10  Rodney Dawes  <dobey@novell.com>

	* GNOME_BattstatApplet.server.in.in:
	* battstat_applet.c (battery_full_notify, battery_full_dialog):
	(battery_low_dialog, about_cb, battery_applet_fill):
	Use battery as the icon name instead of gnome-dev-battery as per the
	icon naming specification

	Fixes #346487

2006-06-29  Daniel Nylander  <po@danielnylander.se>

        * docs/sv/sv.po: Added Swedish translation.
	
2006-01-30  Davyd Madeley  <davyd@madeley.id.au>

	* battstat_applet.c:
	- centre low battery dialog - closes #328959
	- update libnotify API - closes #329145
	  (based on work from Wouter Bolsterlee <gnome@xs4all.nl>)

2006-01-21  Vincent Untz  <vuntz@gnome.org>

	* docs/fr/fr.po: small update

2006-01-17  Davyd Madeley  <davyd@madeley.id.au>

	* battstat_applet.c: remove Ryan's star, replace with a much more
	  straight-forward text string.

2006-01-06  Vincent Untz  <vuntz@gnome.org>

	* docs/fr/fr.po: update french translation, by Christophe Bliard
	  <christophe.bliard@trux.info>

2006-01-03  Ryan Lortie  <desrt@.desrt.ca>

	* battstat_applet.c (battery_full_notify): Move to the new libnotify
	  API.  Patch from Michael Vogt <mvogt@acm.org> closes bug #325541.

	* battstat_applet.c (change_background, create_layout): Remove the
	  old change_background function using the new functionality
	  in libpanel-applet instead.

2005-12-05  Ryan Lortie  <desrt@desrt.ca>

	* battstat_applet.c (battery_low_dialog): Set the "OK" button as the
	  default action (partially addresses bug #315954).

2005-12-05  Ryan Lortie  <desrt@desrt.ca>

	* battstat_applet.c (is_suspend_unavailable): New function to detect
	  in a distribution-specific way if suspend is unsupported.  Included
	  #ifdef'd out code section for supporting Ubuntu's PMI (used for