@@ -1,3 +1,7 @@
+2006-07-23  Daniel Nylander  <po@danielnylander.se>
+
+	* docs/sv/sv.po: Updated Swedish documentation
+
 2006-07-21  Christophe Bliard  <christophe.bliard@trux.info>
 
 	* docs/fr/fr.po: small update in French documentation
